[FIX] : nicknamePage logo align, growth title padding

--- a/front-end/src/pages/Growth.module.css
+++ b/front-end/src/pages/Growth.module.css
@@ -28,6 +28,7 @@
   font-size: 1.2rem;
   margin-top: 4rem;
   font-family: 'lineTh';
+  padding: 0 1rem;
 }
 
 .growthContainer {
