--- a/front-end/src/pages/NickNamePage.module.css
+++ b/front-end/src/pages/NickNamePage.module.css
@@ -58,7 +58,6 @@
 
 .div1 {
   margin-top: 2px;
-  margin-left: 10px;
   font-size: 23px;
   letter-spacing: -0.05em;
   font-family: 'logo';
